# mockifer

./: .gitignore  LICENSE  README.md  build.gradle  build_all_products.sh  build_content.sh  install_run_configurations.sh  mockifer  run_editor.sh  run_sample_ui_tests_android.sh  run_sample_ui_tests_ios_device.sh  run_sample_ui_tests_ios_simulator.sh  settings.gradle
MockiferEditor.app/Contents/: Info.plist
MockiferEditor.app/Contents/Frameworks/: libswiftAppKit.dylib  libswiftCoreData.dylib  libswiftCoreFoundation.dylib  libswiftCoreGraphics.dylib  libswiftCoreImage.dylib  libswiftDarwin.dylib  (+8 more)
Products/android/: readme.txt
Products/console/: readme.txt
Products/editor/: readme.txt  start.sh
Products/ios/: readme.txt
Products/js/: readme.txt
Products/sample-ios/: readme.txt
Source/android/: CMakeLists.txt  build.gradle
Source/android/src/main/cpp/: mockifer-android.cpp
Source/android/src/main/java/mockifer/: Mockifer.java
Source/console/: build.sh
Source/editor/: build.sh
Source/engine/: MockiferCore.h  MockiferManifest.cpp  MockiferRouteManager.cpp  MockiferRouteManager.h  MockiferServer.cpp  MockiferServer.h  MockiferUtil.cpp  MockiferUtil.h
Source/ios/: build.sh
Source/js/: build.gradle
Support/runConfigurations/: Build_Android_Framework.xml  Build_Console_Application.xml  Build_both_Android_and_iOS_Frameworks.xml  Build_iOS_Framework.xml  Clean_all_product_outputs.xml  Run_Mockifer_Editor.xml
Support/samples/: .gitignore
content/: .gitignore  build.gradle  install_run_configurations.sh
gradle/wrapper/: gradle-wrapper.properties
(+221 files in other folders)
